manifests/code-server/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server-internal
  namespace: code-server
spec:
  ingressClassName: nginx
  rules:
    - host: vscode.coil398.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 80
